--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "cypress": "^12.0.2"
+  },
+  "dependencies": {
+    "cypress-iframe": "^1.0.1"
   }
 }
