--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "cypress": "^12.0.2"
+    "cypress": "^12.0.2",
+    "cypress-xpath": "^2.0.1"
   },
   "dependencies": {
     "cypress-iframe": "^1.0.1"
